--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,7 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Redirect requests to the public directory
+    RewriteRule ^storage/(.*)$ storage/$1 [L]
 </IfModule>
